--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,18 @@
-.App {
-  text-align: center; }
+@charset "UTF-8";
+h1 {
+  white-space: pre-line; }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px; }
+.page-1 {
+  /* width: 50vw;  */
+  height: 100vh;
+  text-align: center;
+  /* vertical-align: middle; */
+  /* line-height: 100vh; */
+  background: #000;
+  color: #fefefe;
+  border-radius: 0; }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white; }
-
-.App-title {
-  font-size: 1.5em; }
-
-.App-intro {
-  font-size: large; }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+.page-1-content {
+  /* 타 기기 테스트 후 정함 */
+  /* transform: translateY(200%); */
+  padding-top: 37vh; }
