Parallax 스크롤 적용중

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,13 +2,25 @@ h1 {
   white-space: pre-line;
 }
 
+.to-bottom {
+  background: none;
+  color: #fefefe;
+  border: none;
+  width: 100%;
+  position: absolute;
+  bottom: 60px;
+  cursor: pointer;
+}
+
 .page-1 {
   /* width: 50vw;  */
+  position: relative;
   height: 100vh;
   text-align: center;
-  /* vertical-align: middle; */
-  /* line-height: 100vh; */
-  background: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center; // background: #000;
+  // background: -webkit-linear-gradient(#c3c194 10%, #6f8b78 60%, #353e45 100%);
   color: #fefefe;
   border-radius: 0;
 }
@@ -16,5 +28,59 @@ h1 {
 .page-1-content {
   /* 타 기기 테스트 후 정함 */
   /* transform: translateY(200%); */
-  padding-top: 37vh;
+  // padding-top: 37vh;
+}
+
+.page-2 {
+  /* width: 50vw;  */
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center; // background: #fefefe;
+  background: -webkit-linear-gradient(#968f0f 10%, #76b389 60%, #1a8ee7 100%);
+  color: #000;
+  border-radius: 0;
+}
+
+.page-2-content {
+  /* 타 기기 테스트 후 정함 */
+  /* transform: translateY(200%); */
+  // padding-top: 37vh;
+}
+
+.page-3 {
+  /* width: 50vw;  */
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: -webkit-linear-gradient(#161609 10%, #572896 60%, #c54512 100%); // background: #000;
+  color: #fefefe;
+  border-radius: 0;
+}
+
+.page-3-content {
+  /* 타 기기 테스트 후 정함 */
+  /* transform: translateY(200%); */
+  // padding-top: 37vh;
+}
+
+.page-4 {
+  /* width: 50vw;  */
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center; // background: #fefefe;
+  background: -webkit-linear-gradient(#22c73e 10%, #640a5e 60%, #f1f8c7 100%);
+  color: #000;
+  border-radius: 0;
+}
+
+.page-4-content {
+  /* 타 기기 테스트 후 정함 */
+  /* transform: translateY(200%); */
+  // padding-top: 37vh;
 }
