--- a/src/App.css
+++ b/src/App.css
@@ -30,10 +30,12 @@ ul li {
 
 .page-2 {
   /* width: 50vw;  */
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #000;
   color: #000; }
 
 .page-2-content {
@@ -42,10 +44,12 @@ ul li {
 
 .page-3 {
   /* width: 50vw;  */
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #fefefe;
   color: #fefefe; }
 
 .page-3-content {
@@ -54,12 +58,33 @@ ul li {
 
 .page-4 {
   /* width: 50vw;  */
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #000;
   color: #000; }
 
 .page-4-content {
   /* 타 기기 테스트 후 정함 */
   /* transform: translateY(200%); */ }
+
+.page-5 {
+  /* width: 50vw;  */
+  min-height: 100vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fefefe;
+  color: #fefefe; }
+
+.page-6 {
+  /* width: 50vw;  */
+  min-height: 100vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fefefe; }
