--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,11 @@
 h1 {
   white-space: pre-line;
 }
+
 ul li {
   list-style: none;
 }
+
 .to-bottom {
   background: none;
   color: #fefefe;
@@ -21,8 +23,7 @@ ul li {
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center; 
-  // background: #000;
+  justify-content: center; // background: #fefefe;
   // background: -webkit-linear-gradient(#c3c194 10%, #6f8b78 60%, #353e45 100%);
   color: #fefefe;
 }
@@ -35,12 +36,12 @@ ul li {
 
 .page-2 {
   /* width: 50vw;  */
-  // min-height: 100vh;
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center; 
-  // background: #fefefe;
+  justify-content: center;
+  background: #000;
   color: #000;
 }
 
@@ -52,13 +53,12 @@ ul li {
 
 .page-3 {
   /* width: 50vw;  */
-  // min-height: 100vh;
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center;
-  // background: -webkit-linear-gradient(#161609 10%, #572896 60%, #c54512 100%); 
-  // background: #000;
+  justify-content: center; // background: -webkit-linear-gradient(#161609 10%, #572896 60%, #c54512 100%); 
+  background: #fefefe;
   color: #fefefe;
 }
 
@@ -70,12 +70,12 @@ ul li {
 
 .page-4 {
   /* width: 50vw;  */
-  // min-height: 130%;
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center; 
-  // background: #fefefe;
+  background: #000;
   color: #000;
 }
 
@@ -83,4 +83,26 @@ ul li {
   /* 타 기기 테스트 후 정함 */
   /* transform: translateY(200%); */
   // padding-top: 37vh;
+}
+
+.page-5 {
+  /* width: 50vw;  */
+  min-height: 100vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  background: #fefefe;
+  color: #fefefe;
+}
+
+.page-6 {
+  /* width: 50vw;  */
+  min-height: 100vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  background: #fefefe;
+  // color: #fefefe;
 }
