--- a/src/App.1.scss
+++ b/src/App.1.scss
@@ -1,24 +1,12 @@
 h1 {
   white-space: pre-line;
 }
-
 .App {
   min-height: 100vh;
   overflow: hidden;
 }
-
 ul li {
   list-style: none;
-}
-
-.to-top {
-  background: none;
-  color: #fefefe;
-  border: none;
-  width: 100%;
-  position: absolute;
-  top: 3%;
-  cursor: pointer;
 }
 
 .to-bottom {
@@ -31,25 +19,9 @@ ul li {
   cursor: pointer;
 }
 
-.indicator {
-  position: absolute;
-  right: 3%;
-  width: 30px;
-  height: 10%;
-  top: 40%; // display: flex;
-  // align-items: center;
-}
-
-.carousel__dot {
-  width: 5%;
-  height: 10%
-}
-
-
 .page-1 {
   position: relative;
-  width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
@@ -64,14 +36,13 @@ ul li {
 
 .page-2 {
   // z-index: 10000;
-  position: relative;
-  height: 100vh;
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: blue;
   color: #fefefe;
-  background-color: #000;
 }
 
 .page-2-p {
@@ -86,14 +57,13 @@ ul li {
 
 .page-3 {
   /* width: 50vw;  */
-  height: 100vh;
-  position: relative;
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center; // background: -webkit-linear-gradient(#161609 10%, #572896 60%, #c54512 100%); 
+  background: #fefefe;
   color: #fefefe;
-  background-color: #000;
 }
 
 .page-3-content {
@@ -104,14 +74,13 @@ ul li {
 
 .page-4 {
   /* width: 50vw;  */
-  height: 100vh;
-  position: relative;
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fefefe;
-  background-color: #000;
+  background: #000;
+  color: #000;
 }
 
 .page-4-content {
@@ -122,24 +91,21 @@ ul li {
 
 .page-5 {
   /* width: 50vw;  */
-  height: 100vh;
-  position: relative;
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #fefefe;
   color: #fefefe;
-  background-color: #000;
 }
 
 .page-6 {
   /* width: 50vw;  */
-  height: 100vh;
-  position: relative;
+  min-height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fefefe;
-  background-color: #000;
+  background: #fefefe; // color: #fefefe;
 }
