--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,25 @@ h1 {
   white-space: pre-line; }
 
 .App {
-  min-height: 100vh;
+  min-height: 101vh;
   overflow: hidden; }
 
-ul li {
-  list-style: none; }
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.touch-guide {
+  font-size: 0.8rem; }
 
 .to-top {
   background: none;
   color: #fefefe;
   border: none;
   width: 100%;
+  height: 7%;
   position: absolute;
-  top: 3%;
+  top: 1%;
   cursor: pointer; }
 
 .to-bottom {
@@ -23,8 +29,9 @@ ul li {
   color: #fefefe;
   border: none;
   width: 100%;
+  height: 7%;
   position: absolute;
-  bottom: 3%;
+  bottom: 1%;
   cursor: pointer; }
 
 .indicator {
@@ -41,7 +48,7 @@ ul li {
 .page-1 {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 101vh;
   text-align: center;
   display: flex;
   align-items: center;
@@ -54,7 +61,7 @@ ul li {
 
 .page-2 {
   position: relative;
-  height: 100vh;
+  height: 101vh;
   text-align: center;
   display: flex;
   align-items: center;
@@ -71,7 +78,7 @@ ul li {
 
 .page-3 {
   /* width: 50vw;  */
-  height: 100vh;
+  height: 101vh;
   position: relative;
   text-align: center;
   display: flex;
@@ -86,7 +93,7 @@ ul li {
 
 .page-4 {
   /* width: 50vw;  */
-  height: 100vh;
+  height: 101vh;
   position: relative;
   text-align: center;
   display: flex;
@@ -101,7 +108,7 @@ ul li {
 
 .page-5 {
   /* width: 50vw;  */
-  height: 100vh;
+  height: 101vh;
   position: relative;
   text-align: center;
   display: flex;
@@ -112,7 +119,7 @@ ul li {
 
 .page-6 {
   /* width: 50vw;  */
-  height: 100vh;
+  height: 101vh;
   position: relative;
   text-align: center;
   display: flex;
