--- a/src/App.scss
+++ b/src/App.scss
@@ -3,12 +3,18 @@ h1 {
 }
 
 .App {
-  min-height: 100vh;
+  min-height: 101vh;
   overflow: hidden;
 }
 
-ul li {
+ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.touch-guide {
+  font-size: 0.8rem;
 }
 
 .to-top {
@@ -16,8 +22,9 @@ ul li {
   color: #fefefe;
   border: none;
   width: 100%;
+  height: 7%;
   position: absolute;
-  top: 3%;
+  top: 1%;
   cursor: pointer;
 }
 
@@ -26,8 +33,9 @@ ul li {
   color: #fefefe;
   border: none;
   width: 100%;
+  height: 7%;
   position: absolute;
-  bottom: 3%;
+  bottom: 1%;
   cursor: pointer;
 }
 
@@ -45,11 +53,10 @@ ul li {
   height: 10%
 }
 
-
 .page-1 {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 101vh;
   text-align: center;
   display: flex;
   align-items: center;
@@ -65,13 +72,13 @@ ul li {
 .page-2 {
   // z-index: 10000;
   position: relative;
-  height: 100vh;
+  height: 101vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000;
+  background-color: #000; // background-color: rgb(58, 8, 8);
 }
 
 .page-2-p {
@@ -86,7 +93,7 @@ ul li {
 
 .page-3 {
   /* width: 50vw;  */
-  height: 100vh;
+  height: 101vh;
   position: relative;
   text-align: center;
   display: flex;
@@ -104,7 +111,7 @@ ul li {
 
 .page-4 {
   /* width: 50vw;  */
-  height: 100vh;
+  height: 101vh;
   position: relative;
   text-align: center;
   display: flex;
@@ -122,7 +129,7 @@ ul li {
 
 .page-5 {
   /* width: 50vw;  */
-  height: 100vh;
+  height: 101vh;
   position: relative;
   text-align: center;
   display: flex;
@@ -134,7 +141,7 @@ ul li {
 
 .page-6 {
   /* width: 50vw;  */
-  height: 100vh;
+  height: 101vh;
   position: relative;
   text-align: center;
   display: flex;
