--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 h1 {
   white-space: pre-line; }
 
@@ -34,17 +33,6 @@ ul {
   bottom: 1%;
   cursor: pointer; }
 
-.indicator {
-  position: absolute;
-  right: 3%;
-  width: 30px;
-  height: 10%;
-  top: 40%; }
-
-.carousel__dot {
-  width: 5%;
-  height: 10%; }
-
 .page-1 {
   position: relative;
   width: 100%;
@@ -57,7 +45,7 @@ ul {
   background-color: #000; }
 
 .page-1-p {
-  font-size: 1.9rem; }
+  font-size: 1.6rem; }
 
 .page-2 {
   position: relative;
@@ -69,15 +57,7 @@ ul {
   color: #fefefe;
   background-color: #000; }
 
-.page-2-p {
-  font-size: 1.9rem; }
-
-.page-2-content {
-  /* 타 기기 테스트 후 정함 */
-  /* transform: translateY(200%); */ }
-
 .page-3 {
-  /* width: 50vw;  */
   height: 101vh;
   position: relative;
   text-align: center;
@@ -86,13 +66,8 @@ ul {
   justify-content: center;
   color: #fefefe;
   background-color: #000; }
-
-.page-3-content {
-  /* 타 기기 테스트 후 정함 */
-  /* transform: translateY(200%); */ }
 
 .page-4 {
-  /* width: 50vw;  */
   height: 101vh;
   position: relative;
   text-align: center;
@@ -102,12 +77,7 @@ ul {
   color: #fefefe;
   background-color: #000; }
 
-.page-4-content {
-  /* 타 기기 테스트 후 정함 */
-  /* transform: translateY(200%); */ }
-
 .page-5 {
-  /* width: 50vw;  */
   height: 101vh;
   position: relative;
   text-align: center;
@@ -118,7 +88,6 @@ ul {
   background-color: #000; }
 
 .page-6 {
-  /* width: 50vw;  */
   height: 101vh;
   position: relative;
   text-align: center;
@@ -127,3 +96,13 @@ ul {
   justify-content: center;
   color: #fefefe;
   background-color: #000; }
+
+.page-2-h4 {
+  font-weight: 400; }
+
+@media screen and (min-width: 0px) and (max-width: 533px) {
+  .btn-info-link {
+    width: 38px;
+    overflow: hidden; }
+    .btn-info-link .fa {
+      margin-right: 20px; } }
