--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+// 기본 레이아웃
 h1 {
   white-space: pre-line;
 }
@@ -39,20 +40,6 @@ ul {
   cursor: pointer;
 }
 
-.indicator {
-  position: absolute;
-  right: 3%;
-  width: 30px;
-  height: 10%;
-  top: 40%; // display: flex;
-  // align-items: center;
-}
-
-.carousel__dot {
-  width: 5%;
-  height: 10%
-}
-
 .page-1 {
   position: relative;
   width: 100%;
@@ -66,11 +53,10 @@ ul {
 }
 
 .page-1-p {
-  font-size: 1.9rem;
+  font-size: 1.6rem;
 }
 
 .page-2 {
-  // z-index: 10000;
   position: relative;
   height: 101vh;
   text-align: center;
@@ -78,39 +64,21 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000; // background-color: rgb(58, 8, 8);
-}
-
-.page-2-p {
-  font-size: 1.9rem;
-}
-
-.page-2-content {
-  /* 타 기기 테스트 후 정함 */
-  /* transform: translateY(200%); */
-  // padding-top: 37vh;
+  background-color: #000;
 }
 
 .page-3 {
-  /* width: 50vw;  */
   height: 101vh;
   position: relative;
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center; // background: -webkit-linear-gradient(#161609 10%, #572896 60%, #c54512 100%); 
+  justify-content: center;
   color: #fefefe;
-  background-color: #000;
-}
-
-.page-3-content {
-  /* 타 기기 테스트 후 정함 */
-  /* transform: translateY(200%); */
-  // padding-top: 37vh;
+  background-color: #000; // overflow: auto;
 }
 
 .page-4 {
-  /* width: 50vw;  */
   height: 101vh;
   position: relative;
   text-align: center;
@@ -121,14 +89,7 @@ ul {
   background-color: #000;
 }
 
-.page-4-content {
-  /* 타 기기 테스트 후 정함 */
-  /* transform: translateY(200%); */
-  // padding-top: 37vh;
-}
-
 .page-5 {
-  /* width: 50vw;  */
   height: 101vh;
   position: relative;
   text-align: center;
@@ -140,7 +101,6 @@ ul {
 }
 
 .page-6 {
-  /* width: 50vw;  */
   height: 101vh;
   position: relative;
   text-align: center;
@@ -149,4 +109,77 @@ ul {
   justify-content: center;
   color: #fefefe;
   background-color: #000;
+}
+
+// 세부 레이아웃
+.page-2-h4 {
+  font-weight: 400;
+}
+
+// .project-bg {
+//   // background: #fff;
+//   min-height: 100vh;
+//   display: flex;
+//   align-items: center;
+//   margin: 0;
+// }
+
+// .title-wrapper,
+// .btn-wrapper {
+//   text-align: center;
+// }
+
+// .project-title {
+//   font-family: 'Baloo', cursive;
+//   font-size: 4rem; // font-weight: 300;
+// }
+
+// .video-wrapper {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+// .project-video {
+//   // width: 100%;
+//   // width: 560px;
+//   // height: 315px; 
+// }
+
+// .sub-text {
+//   display: inline-block;
+//   margin-top: 10px;
+//   margin-bottom: 15px;
+// }
+
+// .info {
+//   margin-top: 30px;
+// }
+
+// .info-list {
+//   margin-bottom: 25px;
+// }
+
+// .content-title {
+//   font-size: 1rem;
+//   font-weight: 500;
+//   margin-bottom: 5px;
+// }
+
+// .content-text {
+//   font-weight: 200;
+// }
+
+// .btn-info-link {
+//   margin-right: 10px;
+// }
+
+@media screen and (min-width: 0px) and (max-width: 533px) {
+  .btn-info-link {
+    width: 38px;
+    overflow: hidden;
+    .fa {
+      margin-right: 20px;
+    }
+  }
 }
