--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ h1 {
   min-height: 101vh;
   overflow: hidden; }
 
+.container {
+  min-height: 90%;
+  text-align: left; }
+
 ul {
   list-style: none;
   margin: 0;
@@ -18,7 +22,7 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 5%;
   position: absolute;
   top: 1%;
   cursor: pointer; }
@@ -28,7 +32,7 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 5%;
   position: absolute;
   bottom: 1%;
   cursor: pointer; }
@@ -99,6 +103,47 @@ ul {
 
 .page-2-h4 {
   font-weight: 400; }
+
+.typed-cursor {
+  opacity: 1;
+  animation: blink 0.6s infinite;
+  -webkit-animation: blink 0.6s infinite;
+  -moz-animation: blink 0.6s infinite; }
+
+@keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@-moz-keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+.project-title {
+  margin: 15px 0 5px 0;
+  text-align: center; }
+
+.sub-title {
+  text-align: center;
+  padding-bottom: 10px; }
+
+.embed-responsive {
+  margin-bottom: 10px; }
 
 @media screen and (min-width: 0px) and (max-width: 533px) {
   .btn-info-link {
