--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,11 @@ h1 {
   overflow: hidden;
 }
 
+.container {
+  min-height: 90%; // width: 100%;
+  text-align: left;
+}
+
 ul {
   list-style: none;
   margin: 0;
@@ -23,7 +28,7 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 5%;
   position: absolute;
   top: 1%;
   cursor: pointer;
@@ -34,7 +39,7 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 5%;
   position: absolute;
   bottom: 1%;
   cursor: pointer;
@@ -111,68 +116,80 @@ ul {
   background-color: #000;
 }
 
-// 세부 레이아웃
+// page2 세부 CSS
 .page-2-h4 {
   font-weight: 400;
 }
 
-// .project-bg {
-//   // background: #fff;
-//   min-height: 100vh;
-//   display: flex;
-//   align-items: center;
-//   margin: 0;
-// }
+.typed-cursor {
+  opacity: 1;
+  animation: blink 0.6s infinite;
+  -webkit-animation: blink 0.6s infinite;
+  -moz-animation: blink 0.6s infinite;
+}
 
-// .title-wrapper,
-// .btn-wrapper {
-//   text-align: center;
-// }
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
-// .project-title {
-//   font-family: 'Baloo', cursive;
-//   font-size: 4rem; // font-weight: 300;
-// }
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
-// .video-wrapper {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
+@-moz-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
-// .project-video {
-//   // width: 100%;
-//   // width: 560px;
-//   // height: 315px; 
-// }
+// page3,4 프로젝트 내역 세부 CSS
+.project-title {
+  margin: 15px 0 5px 0;
+  text-align: center;
+}
 
-// .sub-text {
-//   display: inline-block;
-//   margin-top: 10px;
-//   margin-bottom: 15px;
-// }
+.sub-title {
+  text-align: center;
+  padding-bottom: 10px;
+}
 
-// .info {
-//   margin-top: 30px;
-// }
+.embed-responsive {
+  margin-bottom: 10px;
+}
 
-// .info-list {
-//   margin-bottom: 25px;
-// }
+.content-title {
+  // padding-top: 10px;
+}
 
-// .content-title {
-//   font-size: 1rem;
-//   font-weight: 500;
-//   margin-bottom: 5px;
-// }
+.content-text-summary {
 
-// .content-text {
-//   font-weight: 200;
-// }
+}
 
-// .btn-info-link {
-//   margin-right: 10px;
-// }
+.content-wrapper {
+  // text-align: center;
+}
 
 @media screen and (min-width: 0px) and (max-width: 533px) {
   .btn-info-link {
