--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,6 @@ h1 {
 h5 {
   font-size: 1.1rem; }
 
-.dotdot {
-  background: red; }
-
 .App {
   min-height: 101vh;
   overflow: hidden;
@@ -42,7 +39,7 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 8%;
   position: absolute;
   top: 1%;
   cursor: pointer; }
@@ -62,7 +59,7 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 8%;
   position: absolute;
   bottom: 1%;
   cursor: pointer; }
@@ -82,7 +79,8 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 8%;
+  left: 0;
   position: absolute;
   bottom: 1%;
   cursor: pointer; }
@@ -92,7 +90,7 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 10%;
   position: absolute;
   bottom: 1%;
   cursor: pointer; }
@@ -106,7 +104,9 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000; }
+  background-color: #000;
+  padding: 40vh 0;
+  overflow: auto; }
 
 .page-1-p {
   font-size: 1.6rem; }
@@ -119,7 +119,9 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000; }
+  background-color: #000;
+  padding: 50vh 0;
+  overflow: auto; }
 
 .page-3 {
   height: 101vh;
@@ -129,7 +131,9 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000; }
+  background-color: #000;
+  padding: 40vh 0;
+  overflow: auto; }
 
 .page-4 {
   height: 101vh;
@@ -139,7 +143,9 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000; }
+  background-color: #000;
+  padding: 40vh 0;
+  overflow: auto; }
 
 .page-5 {
   height: 101vh;
@@ -149,7 +155,9 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000; }
+  background-color: #000;
+  padding: 40vh 0;
+  overflow: auto; }
 
 .page-6 {
   height: 101vh;
@@ -159,7 +167,9 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000; }
+  background-color: #000;
+  padding: 40vh 0;
+  overflow: auto; }
 
 .page-2-h4 {
   font-weight: 400; }
