--- a/src/App.scss
+++ b/src/App.scss
@@ -13,15 +13,11 @@ h5 {
   font-size: 1.1rem;
 }
 
-.dotdot {
-  background: red;
-}
-
 .App {
   min-height: 101vh;
   overflow: hidden; // overflow: auto;
   padding: 5px;
-  background: #000;
+  background: #000; // padding-bottom: 10vh;
 }
 
 .container {
@@ -52,7 +48,7 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 8%;
   position: absolute;
   top: 1%;
   cursor: pointer;
@@ -74,7 +70,7 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 8%;
   position: absolute;
   bottom: 1%;
   cursor: pointer;
@@ -96,7 +92,8 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 8%;
+  left: 0;
   position: absolute;
   bottom: 1%;
   cursor: pointer;
@@ -107,7 +104,7 @@ ul {
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 7%;
+  height: 10%;
   position: absolute;
   bottom: 1%;
   cursor: pointer;
@@ -130,13 +127,15 @@ ul {
 .page-1 {
   position: relative;
   width: 100%;
-  height: 101vh;
+  height: 101vh; // height: 100%;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fefefe;
   background-color: #000;
+  padding: 40vh 0;
+  overflow: auto;
 }
 
 .page-1-p {
@@ -152,6 +151,8 @@ ul {
   justify-content: center;
   color: #fefefe;
   background-color: #000;
+  padding: 50vh 0;
+  overflow: auto;
 }
 
 .page-3 {
@@ -162,7 +163,9 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000; // overflow: auto;
+  background-color: #000;
+  padding: 40vh 0;
+  overflow: auto;
 }
 
 .page-4 {
@@ -174,6 +177,8 @@ ul {
   justify-content: center;
   color: #fefefe;
   background-color: #000;
+  padding: 40vh 0;
+  overflow: auto;
 }
 
 .page-5 {
@@ -185,6 +190,8 @@ ul {
   justify-content: center;
   color: #fefefe;
   background-color: #000;
+  padding: 40vh 0;
+  overflow: auto;
 }
 
 .page-6 {
@@ -196,7 +203,11 @@ ul {
   justify-content: center;
   color: #fefefe;
   background-color: #000;
-} // page2 세부 CSS
+  padding: 40vh 0;
+  overflow: auto;
+}
+
+// page2 세부 CSS
 .page-2-h4 {
   font-weight: 400;
 }
