--- a/src/App.scss
+++ b/src/App.scss
@@ -15,9 +15,9 @@ h5 {
 
 .App {
   min-height: 101vh;
-  overflow: hidden; // overflow: auto;
+  overflow: hidden;
   padding: 5px;
-  background: #000; // padding-bottom: 10vh;
+  background: #1a1a1a;
 }
 
 .container {
@@ -32,6 +32,14 @@ ul {
 }
 
 .guide-msg {
+  position: absolute;
+  top: 25px;
+  right: 1%;
+  font-size: 0.8rem;
+  color: #ebe6e6;
+}
+
+.react-msg {
   position: absolute;
   top: 1%;
   right: 1%;
@@ -51,17 +59,19 @@ ul {
   height: 8%;
   position: absolute;
   top: 1%;
+  left: 0%;
   cursor: pointer;
 }
 
-.to-top-no-arrow {
+.to-top-project {
   background: none;
   color: #fefefe;
   border: none;
   width: 100%;
-  height: 10%;
+  height: 8%;
   position: absolute;
   top: 1%;
+  left: 0%;
   cursor: pointer;
 }
 
@@ -73,17 +83,19 @@ ul {
   height: 8%;
   position: absolute;
   bottom: 1%;
+  left: 0%;
   cursor: pointer;
 }
 
-.to-bottom-no-arrow {
+.to-bottom-project {
   background: none;
   color: #fefefe;
   border: none;
   width: 100%;
   height: 10%;
   position: absolute;
-  bottom: 1%;
+  bottom: -35%;
+  left: 0%;
   cursor: pointer;
 }
 
@@ -96,6 +108,7 @@ ul {
   left: 0;
   position: absolute;
   bottom: 1%;
+  left: 0%;
   cursor: pointer;
 }
 
@@ -107,6 +120,7 @@ ul {
   height: 10%;
   position: absolute;
   bottom: 1%;
+  left: 0%;
   cursor: pointer;
 }
 
@@ -133,8 +147,8 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000;
-  padding: 40vh 0;
+  background-color: #1a1a1a;
+  padding: 45vh 0;
   overflow: auto;
 }
 
@@ -150,7 +164,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000;
+  background-color: #1a1a1a;
   padding: 50vh 0;
   overflow: auto;
 }
@@ -163,8 +177,8 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000;
-  padding: 40vh 0;
+  background-color: #1a1a1a; // padding: 40vh 0;
+  // margin-top: 10vh;
   overflow: auto;
 }
 
@@ -176,8 +190,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000;
-  padding: 40vh 0;
+  background-color: #1a1a1a; // padding: 45vh 0;
   overflow: auto;
 }
 
@@ -189,7 +202,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000;
+  background-color: #1a1a1a;
   padding: 40vh 0;
   overflow: auto;
 }
@@ -202,7 +215,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #000;
+  background-color: #1a1a1a;
   padding: 40vh 0;
   overflow: auto;
 }
@@ -253,9 +266,17 @@ ul {
   100% {
     opacity: 1;
   }
-} // page3,4 프로젝트 내역 세부 CSS
+}
+
+// page3,4 프로젝트 내역 세부 CSS
 .project-title {
-  margin: 15px 0 5px 0;
+  margin: 200px 0 5px 0; // margin: 200px 0 5px 0;
+  text-align: center;
+  font-size: 1.6rem;
+}
+
+.project-title-p3 {
+  margin: 140px 0 5px 0; // margin: 150px 0 5px 0;
   text-align: center;
   font-size: 1.6rem;
 }
@@ -280,6 +301,7 @@ ul {
 
 .content-text-summary {
   margin-bottom: 0;
+  line-height: initial;
 }
 
 .btn-wrapper {
@@ -298,4 +320,62 @@ ul {
       margin-right: 20px;
     }
   }
+}
+
+.running-emoji {
+  -moz-transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+  -moz-animation: run 10s linear infinite;
+  -webkit-animation: run 10s linear infinite;
+  animation: run 10s linear infinite;
+  -webkit-transition-delay: 0.5s;
+  transition-delay: 0.5s;
+  margin-bottom: 3px;
+  font-size: 1.3rem;
+}
+
+@-moz-keyframes run {
+  0% {
+    -moz-transform: translateX(-100%);
+  }
+  100% {
+    -moz-transform: translateX(100%);
+  }
+}
+
+@-webkit-keyframes run {
+  0% {
+    -webkit-transform: translateX(-100%);
+  }
+  100% {
+    -webkit-transform: translateX(100%);
+  }
+}
+
+@keyframes run {
+  0% {
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  100% {
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+}
+
+.box {
+  width: 100%;
+  height: 0;
+  border: #fefefe solid 0.5px;
+}
+
+.email {
+  color: #fefefe;
+}
+
+.more-contact {
+  font-weight: 300 !important;
 }
