--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
 body {
   font-family: 'Noto Sans', sans-serif; }
 
+html {
+  -ms-overflow-style: none; }
+
+body::-webkit-scrollbar {
+  width: 0 !important; }
+
 h1 {
   white-space: pre-line;
   font-size: 1.9rem; }
@@ -18,6 +24,12 @@ h5 {
 .container {
   min-height: 90%;
   text-align: left; }
+
+ul:focus {
+  outline: none; }
+
+li:focus {
+  outline: none; }
 
 ul {
   list-style: none;
@@ -260,9 +272,9 @@ ul {
   -moz-transform: translateX(-100%);
   -webkit-transform: translateX(-100%);
   transform: translateX(-100%);
-  -moz-animation: run 10s linear infinite;
-  -webkit-animation: run 10s linear infinite;
-  animation: run 10s linear infinite;
+  -moz-animation: run 13s linear infinite;
+  -webkit-animation: run 13s linear infinite;
+  animation: run 13s linear infinite;
   -webkit-transition-delay: 0.5s;
   transition-delay: 0.5s;
   margin-bottom: 3px;
