코드 정리 및 페이지5  메세지 간격 수정

--- a/src/App.css
+++ b/src/App.css
@@ -21,10 +21,6 @@ h5 {
   padding: 5px;
   background: #1a1a1a; }
 
-.container {
-  min-height: 90%;
-  text-align: left; }
-
 ul:focus {
   outline: none; }
 
@@ -133,9 +129,6 @@ ul {
   padding: 45vh 0;
   overflow: auto; }
 
-.page-1-p {
-  font-size: 1.6rem; }
-
 .page-2 {
   position: relative;
   height: 101vh;
@@ -193,6 +186,9 @@ ul {
   background-color: #1a1a1a;
   padding: 40vh 0;
   overflow: auto; }
+
+.page-1-p {
+  font-size: 1.6rem; }
 
 .page-2-h4 {
   font-weight: 400; }
@@ -261,6 +257,9 @@ ul {
 .btn-info-link {
   margin-right: 10px; }
 
+.content-text-stacks {
+  line-height: 1.6; }
+
 @media screen and (min-width: 0px) and (max-width: 533px) {
   .btn-info-link {
     width: 38px;
@@ -272,35 +271,35 @@ ul {
   -moz-transform: translateX(-100%);
   -webkit-transform: translateX(-100%);
   transform: translateX(-100%);
-  -moz-animation: run 13s linear infinite;
-  -webkit-animation: run 13s linear infinite;
-  animation: run 13s linear infinite;
-  -webkit-transition-delay: 0.5s;
-  transition-delay: 0.5s;
+  -moz-animation: run 10s linear infinite;
+  -webkit-animation: run 10s linear infinite;
+  animation: run 10s linear infinite;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
   margin-bottom: 3px;
   font-size: 1.3rem; }
 
 @-moz-keyframes run {
   0% {
-    -moz-transform: translateX(-100%); }
+    -moz-transform: translateX(-50%); }
   100% {
-    -moz-transform: translateX(100%); } }
+    -moz-transform: translateX(50%); } }
 
 @-webkit-keyframes run {
   0% {
-    -webkit-transform: translateX(-100%); }
+    -webkit-transform: translateX(-50%); }
   100% {
-    -webkit-transform: translateX(100%); } }
+    -webkit-transform: translateX(50%); } }
 
 @keyframes run {
   0% {
-    -moz-transform: translateX(-100%);
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%); }
+    -moz-transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%); }
   100% {
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%); } }
+    -moz-transform: translateX(50%);
+    -webkit-transform: translateX(50%);
+    transform: translateX(50%); } }
 
 .box {
   width: 100%;
