--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@ body {
   font-family: 'Noto Sans', sans-serif;
 }
 
+// 스크롤바 없애기
 html {
   -ms-overflow-style: none;
 }
@@ -26,11 +27,6 @@ h5 {
   overflow: hidden;
   padding: 5px;
   background: #1a1a1a;
-}
-
-.container {
-  min-height: 90%; // width: 100%;
-  text-align: left;
 }
 
 ul:focus {
@@ -140,24 +136,10 @@ ul {
   cursor: pointer;
 }
 
-// iPhone 6 width: 375px
-// iPhone 5 width: 320px
-// Galaxy S5 width: 320px
-// mobile에서는 아예 버튼을 없애고 스크롤 이벤트를..
-// @media screen and (min-width: 0px) and (max-width: 768px) {
-//   .to-top {
-//     display: none;
-//   }
-// }
-// @media screen and (min-width: 0px) and (max-width: 768px) {
-//   .to-bottom {
-//     display: none;
-//   }
-// }
 .page-1 {
   position: relative;
   width: 100%;
-  height: 101vh; // height: 100%;
+  height: 101vh;
   text-align: center;
   display: flex;
   align-items: center;
@@ -166,10 +148,6 @@ ul {
   background-color: #1a1a1a;
   padding: 45vh 0;
   overflow: auto;
-}
-
-.page-1-p {
-  font-size: 1.6rem;
 }
 
 .page-2 {
@@ -193,8 +171,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #1a1a1a; // padding: 40vh 0;
-  // margin-top: 10vh;
+  background-color: #1a1a1a;
   overflow: auto;
 }
 
@@ -206,7 +183,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #1a1a1a; // padding: 45vh 0;
+  background-color: #1a1a1a;
   overflow: auto;
 }
 
@@ -236,11 +213,17 @@ ul {
   overflow: auto;
 }
 
+// page1 세부 CSS
+.page-1-p {
+  font-size: 1.6rem;
+}
+
 // page2 세부 CSS
 .page-2-h4 {
   font-weight: 400;
 }
 
+// typed 애니메이션 관련
 .typed-cursor {
   opacity: 1;
   animation: blink 0.6s infinite;
@@ -286,13 +269,13 @@ ul {
 
 // page3,4 프로젝트 내역 세부 CSS
 .project-title {
-  margin: 200px 0 5px 0; // margin: 200px 0 5px 0;
+  margin: 200px 0 5px 0;
   text-align: center;
   font-size: 1.6rem;
 }
 
 .project-title-p3 {
-  margin: 140px 0 5px 0; // margin: 150px 0 5px 0;
+  margin: 140px 0 5px 0;
   text-align: center;
   font-size: 1.6rem;
 }
@@ -328,6 +311,10 @@ ul {
   margin-right: 10px;
 }
 
+.content-text-stacks {
+  line-height: 1.6;
+}
+
 @media screen and (min-width: 0px) and (max-width: 533px) {
   .btn-info-link {
     width: 38px;
@@ -338,47 +325,48 @@ ul {
   }
 }
 
+// page5 애니메이션 관련
 .running-emoji {
   -moz-transform: translateX(-100%);
   -webkit-transform: translateX(-100%);
   transform: translateX(-100%);
-  -moz-animation: run 13s linear infinite;
-  -webkit-animation: run 13s linear infinite;
-  animation: run 13s linear infinite;
-  -webkit-transition-delay: 0.5s;
-  transition-delay: 0.5s;
+  -moz-animation: run 10s linear infinite;
+  -webkit-animation: run 10s linear infinite;
+  animation: run 10s linear infinite;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
   margin-bottom: 3px;
   font-size: 1.3rem;
 }
 
 @-moz-keyframes run {
   0% {
-    -moz-transform: translateX(-100%);
+    -moz-transform: translateX(-50%);
   }
   100% {
-    -moz-transform: translateX(100%);
+    -moz-transform: translateX(50%);
   }
 }
 
 @-webkit-keyframes run {
   0% {
-    -webkit-transform: translateX(-100%);
+    -webkit-transform: translateX(-50%);
   }
   100% {
-    -webkit-transform: translateX(100%);
+    -webkit-transform: translateX(50%);
   }
 }
 
 @keyframes run {
   0% {
-    -moz-transform: translateX(-100%);
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
+    -moz-transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
   }
   100% {
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
+    -moz-transform: translateX(50%);
+    -webkit-transform: translateX(50%);
+    transform: translateX(50%);
   }
 }
 
@@ -388,6 +376,7 @@ ul {
   border: #fefefe solid 0.5px;
 }
 
+// page6
 .email {
   color: #fefefe;
 }
