--- a/src/App.scss
+++ b/src/App.scss
@@ -161,8 +161,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #1a1a1a;
-  padding: 45vh 0;
+  background-color: #1a1a1a; // padding: 45vh 0;
   overflow: auto;
 }
 
@@ -174,8 +173,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #1a1a1a;
-  padding: 50vh 0;
+  background-color: #1a1a1a; // padding: 50vh 0;
   overflow: auto;
 }
 
@@ -211,8 +209,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #1a1a1a;
-  padding: 40vh 0;
+  background-color: #1a1a1a; // padding: 40vh 0;
   overflow: auto;
   overflow-x: hidden;
 }
@@ -225,8 +222,7 @@ ul {
   align-items: center;
   justify-content: center;
   color: #fefefe;
-  background-color: #1a1a1a;
-  padding: 40vh 0;
+  background-color: #1a1a1a; // padding: 40vh 0;
   overflow: auto;
 }
 
@@ -335,6 +331,10 @@ ul {
 
 .btn-wrapper {
   text-align: center;
+}
+
+button {
+  cursor: pointer;
 }
 
 .btn-info-link {
